# kokkos-clang-tidy-module

./: CMakeLists.txt  ImplicitThisCaptureCheck.cpp  ImplicitThisCaptureCheck.h  KokkosMatchers.cpp  KokkosMatchers.h  KokkosTidyModule.cpp  README.md
docs/: kokkos-ensure-kokkos-function.rst  kokkos-replace-view-stride-underscore.rst  list.rst
src/: EnsureKokkosFunctionCheck.cpp  EnsureKokkosFunctionCheck.h  ImplicitThisCaptureCheck.cpp  ImplicitThisCaptureCheck.h  KokkosAnnotationPositionCheck.cpp  KokkosAnnotationPositionCheck.h  KokkosMatchers.cpp  KokkosMatchers.h  KokkosTidyModule.cpp  ReplaceViewStrideUnderscoreCheck.cpp  ReplaceViewStrideUnderscoreCheck.h
tests/: CMakeLists.txt  Kokkos_Core_mock.h  RunClangTidy.cmake  kokkos-annotation-position-fixit.cpp  kokkos-annotation-position-stdout.txt  kokkos-annotation-position.cpp  kokkos-ensure-kokkos-function-stdout.txt  kokkos-ensure-kokkos-function.cpp  kokkos-implicit-this-capture-stdout.txt  kokkos-implicit-this-capture.cpp  kokkos-replace-view-stride-underscore-fixit.cpp  kokkos-replace-view-stride-underscore-stdout.txt  kokkos-replace-view-stride-underscore.cpp
